<resources>
    <string name="app_name">TicketMe</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="already_registered">Already registered ?</string>
    <string name="register">REGISTER</string>
    <string name="not_registered">Not registered ?</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="pie_chart">Pie Chart</string>
</resources>