<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"

    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:drawableLeft="@drawable/logo"
        android:drawablePadding="9dp"
        android:fontFamily="@font/breeserifregular"
        android:text="


       Create a new account"
        android:textColor="@color/black"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:paddingLeft="10dp"
        android:hint="@string/username"
        android:drawableLeft="@drawable/username"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:paddingLeft="10dp"
        android:hint="@string/password"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"/>
    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:hint="@string/confirm_password"
        android:paddingLeft="10dp"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:backgroundTint="@color/greenpale"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered"/>

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/login"/>

    </LinearLayout>



</LinearLayout>